--- a/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -6,15 +6,16 @@
       xmlns:ice="http://www.icesoft.com/icefaces/component"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
     <h:head>
+        <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==3}">
+            #{facesContext.externalContext.redirect("index.xhtml")}      
+        </c:if>
+        <ui:insert name="sesion"></ui:insert>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="#{resource['css:default.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['css:cssLayout.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['images:favicon.ico']}" rel="icon" />
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
         <title><ui:insert name="title"/></title>
-        <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==3}">
-            #{facesContext.externalContext.redirect("index.xhtml")}      
-        </c:if>
     </h:head>
     <h:body>
         <div class="wrapper">
