--- a/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -13,7 +13,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="#{resource['css:default.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['css:cssLayout.css']}" rel="stylesheet" type="text/css" />
-        <link href="#{resource['images:favicon.ico']}" rel="icon" />
+        <link href="#{resource['css:bootstrap.css']}" rel="stylesheet" type="text/css" />
+        <link href="#{resource['css:bootstrap-responsive.css']}" rel="stylesheet" type="text/css" />
+        <link href="#{resource['img:favicon.ico']}" rel="icon" />
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
         <title><ui:insert name="title"/></title>
     </h:head>
@@ -21,7 +23,7 @@
         <div class="wrapper">
             <div id="top">
                 <div id="fancyClock"></div>
-                <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['images:logo.png']}"></ice:graphicImage></div>
+                <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['img:logo-creativemeeting.png']}"></ice:graphicImage></div>
                 <div><ui:insert name="logoempresa"></ui:insert></div>
 
             </div>
