--- a/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -18,11 +18,16 @@
         <link href="#{resource['img:favicon.ico']}" rel="icon" />
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
         <!--[if gte IE 9]><style type="text/css">.gradient {filter: none;}</style><![endif]-->
+        <script src="#{resource['js:reunion.js']}" type="text/javascript" />
         <title><ui:insert name="title"/></title>
+
     </h:head>
     <h:body>
         <div class="wrapper">
             <div id="top">
+
+
+
                 <div id="fancyClock"></div>
                 <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['img:logo-creativemeeting.png']}"></ice:graphicImage></div>
                 <div><ui:insert name="logoempresa"></ui:insert></div>
