--- a/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -16,7 +16,7 @@
         <link href="#{resource['css:bootstrap.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['css:bootstrap-responsive.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['img:favicon.ico']}" rel="icon" />
-        <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
+        <!--<link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>-->
         <!--[if gte IE 9]><style type="text/css">.gradient {filter: none;}</style><![endif]-->
         <script src="#{resource['js:reunion.js']}" type="text/javascript" />
         <title><ui:insert name="title"/></title>
